--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 <script>
     function calculateDaysToChristmas() {
         var today = new Date();
-        var christmas = new Date(2023,11 25);
+        var christmas = new Date(2024,11,25);
 
         var timeDiff = christmas.getTime() - today.getTime();
         var daysRemaining = Math.ceil(timeDiff / (1000 * 60 * 60 * 24));
